# finding-balance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.py  deploy.sh  go.mod  main.cc  makefile  run.sh  server.cc  test.edb.desc  utils.cc  utils.h
go/: benchmark.go  client.go  database.go  database_test.go  double_pir.go  go  go.sum  logging.go  main.go  makefile  matrix.go  matrix_test.go  more_utils.go  params.go  pir.c  pir.go  pir.h  protocol.go  rand.go  recover.go  recover_test.go  server.go  simple_pir.go  test.edb  utils.go  utils_test.go
go/tests/: utils_test.go
params/: 10.ini  20.ini  22.ini  24.ini  24batched.ini  26.ini  26batched.ini  28-large.ini  28-medium.ini  28-small.ini  28.ini  28batched.ini  correctness.ini  threads.ini
src/: benchmark.cc  client.cc  client.h  cuckoo.cc  cuckoo.h  datagen.cc  defines.h  hashtable.cc  hashtable.h  main.cc  offline.cc  online.cc  oprf.cc  preprocess.cc  server.cc  server.h  utils.cc  utils.h
src/tests/: test.db  test.edb  test_all.cc  test_apsi.cc  test_apsi.h  test_cuckoo.cc  test_cuckoo.h  test_hashtable.cc  test_hashtable.h  test_utils.cc  test_utils.h
